Fixed text overflowing on document search results if text is too long.

--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -120,7 +120,6 @@
 }
 
 .collapsible {
-  max-height: 300px;
   transition:
     max-height 0.5s ease-in-out,
     opacity 0.5s ease-in-out;
